--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:watch": "npm run test -- --watch"
   },
   "engines": {
-    "node": "8.1.0"
+    "node": "8.1.0",
+    "npm": "5.4.0"
   },
   "author": "",
   "license": "ISC",
